# bgshr

./: README.md  pyproject.toml
bgshr/: ClassicBGS.py  Inference.py  Predict.py  Util.py  __main__.py
examples/: human_chr22_cds_exons.ipynb  human_chr22_cds_regulatory_model.ipynb  human_chr22_cds_regulatory_model.sh
examples/outputs/: human_chr22_cds_regulatory_model_landscapes.csv
tests/: test_ClassicBGS.py  test_Inference.py  test_Predict.py  test_Util.py
tests/data/: lookup_tbl_one_line_2_epochs.csv  lookup_tbl_one_line_equilibrium.csv
